--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     text-decoration: none;
 }
 :root{
-    --red: #df4d49;
+    --red: #eab6bf;
     --white:#fff;
     --dark: #1e1c2a;
 }
@@ -26,6 +26,7 @@ body{
     width: 100%;
     background: var(--white);
     transition: all 0.5s;
+    position: fixed;
 }
 .navigation ul{
     display: flex;
@@ -61,4 +62,40 @@ body{
 .menu .bar:nth-child(1),
 .menu .bar:nth-child(3){
     background: var(--red)
+}
+.home{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 10%;
+}
+.home-text{
+    max-width: 37rem;
+}
+.home-text .text-h4{
+    font-size: 1.3rem;
+    color:#ee3756;
+    margin-bottom: 1rem;
+}
+.home-text .text-h1{
+    font-size: 3.5rem;
+    margin-bottom: 1rem;
+    line-height: 4rem;
+}
+
+.home-text p{
+    margin-bottom: 4rem;
+}
+.home-btn {
+    padding: 15px 45px;
+    background: #ee3756;
+    color: var(--white);
+    border-radius: 10px;
+    font-weight: 700;
+    transition: all 0.5s;
+}
+.home-btn:hover{
+    background: #fb8ea0;
 }
