--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 *{
     margin: 0;
@@ -9,9 +9,9 @@
     text-decoration: none;
 }
 :root{
-    --red: #eab6bf;
+    --red:#eab6bf;
     --white:#fff;
-    --dark: #1e1c2a;
+    --dark:#1e1c2a;
 }
 body{
     color: var(--dark);
@@ -21,13 +21,14 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 18px 40px;
+    padding: 5px 40px;
     box-shadow: 0 0.1rem 0.5rem #1e1c2a;
     width: 100%;
     background: var(--white);
     transition: all 0.5s;
     position: fixed;
 }
+
 .navigation ul{
     display: flex;
     align-items: center;
@@ -35,7 +36,7 @@ body{
 }
 .navigation ul li a{
     color: #636768;
-    font-size: 17px;
+    font-size: 15px;
     font-weight: 500;
     transition: all 0.5s;
 }
@@ -46,7 +47,7 @@ body{
     cursor: pointer;
     font-size: 1.5rem;
 }
-.menu {
+.menu{
     cursor: pointer;
     display: none;
 }
@@ -61,7 +62,7 @@ body{
 }
 .menu .bar:nth-child(1),
 .menu .bar:nth-child(3){
-    background: var(--red)
+    background: #df4d49;
 }
 .home{
     width: 100%;
@@ -76,7 +77,7 @@ body{
 }
 .home-text .text-h4{
     font-size: 1.3rem;
-    color:#ee3756;
+    color: #ee3756;
     margin-bottom: 1rem;
 }
 .home-text .text-h1{
@@ -84,11 +85,10 @@ body{
     margin-bottom: 1rem;
     line-height: 4rem;
 }
-
 .home-text p{
     margin-bottom: 4rem;
 }
-.home-btn {
+.home-btn{
     padding: 15px 45px;
     background: #ee3756;
     color: var(--white);
@@ -98,4 +98,62 @@ body{
 }
 .home-btn:hover{
     background: #fb8ea0;
+}
+.home-img img{
+    width: 100%;
+}
+@media (max-width:785px) {
+    .navigation{
+        padding: 18px 20px;
+    }
+    .menu{
+        display: block;
+    }
+    .menu.ativo .bar:nth-child(1){
+        transform:  translateY(8px) rotate(45deg);
+    }
+    .menu.ativo .bar:nth-child(2) {
+        opacity: 0;
+    }
+    .menu.ativo .bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
+    }
+    .nav-menu{
+        position: fixed;
+        right: -100%;
+        top: 70px;
+        width: 100%;
+        height: 100%;
+        flex-direction: column;
+        background: var(--white);
+        gap: -10px;
+        transition: 0.3s;
+    }
+    .nav-menu.ativo{
+        right: 0;
+    }
+    .nav-item{
+        margin: 16px 0;
+    }
+    /*main*/
+    .home{
+        padding: 100px 2%;
+        flex-direction: column;
+        text-align: center;
+        overflow: hidden;
+        gap: 5rem;
+    }
+    .home .text-h4{
+        font-size: 15px;
+    }
+    .home .text-h1{
+        font-size: 2.5rem;
+        line-height: 3rem;
+    }
+    .home p{
+        font-size: 15px;
+    }
+    .home-img{
+        width: 125%;
+    }
 }
